spelling mistake corrected

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 engineering standards
               </td>
               <td headers="design-col level-col">
-                Architecs multi-team systems, ensures scalability and
+                Architects multi-team systems, ensures scalability and
                 maintainability
               </td>
               <td headers="impact-col level-col">
